--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Zeno Starter",
   "version": "2.0",
-  "description": "Zeno stack for template assets compilation",
+  "description": "Zeno stack for assets compilation",
   "scripts": {
     "build": "node esbuild.js",
     "watch": "node esbuild_watch.js"
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "esbuild": "0.17.16",
-    "esbuild-sass-plugin": "^2.8.0"
+    "esbuild-sass-plugin": "^2.8.0",
+    "esbuild-plugin-inline-image": "^0.0.9"
   },
   "dependencies": {
     "aos": "^2.3.4",
@@ -28,6 +29,7 @@
     "lazysizes": "^5.3.2",
     "magic-grid": "^3.2.4",
     "mixitup": "^3.3.1",
+    "mixitup-multifilter": "naimboughattas/mixitup-multifilter",
     "plyr": "^3.7.3",
     "smooth-scroll": "^16.1.3",
     "swiper": "^9.1.0",
