--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "Zeno Starter",
-  "version": "2.0",
-  "description": "Zeno stack for assets compilation",
-  "scripts": {
-    "build": "node esbuild.js",
-    "watch": "node esbuild_watch.js"
-  },
-  "type": "module",
-  "author": "Francesco Selva",
-  "license": "MIT",
-  "funding": {
-    "type": "individual",
-    "url": "https://paypal.me/zenotds"
-  },
-  "devDependencies": {
-    "esbuild": "0.17.16",
-    "esbuild-sass-plugin": "^2.8.0",
-    "esbuild-plugin-inline-image": "^0.0.9"
-  },
-  "dependencies": {
-    "aos": "^2.3.4",
-    "bootstrap": "^5.2.3",
-    "colcade": "^0.2.0",
-    "drift-zoom": "^1.5.1",
-    "glightbox": "^3.2.0",
-    "gumshoejs": "^5.1.2",
-    "js-hoverintent": "^1.0.5",
-    "lazysizes": "^5.3.2",
-    "magic-grid": "^3.2.4",
-    "mixitup": "^3.3.1",
-    "mixitup-multifilter": "naimboughattas/mixitup-multifilter",
-    "plyr": "^3.7.3",
-    "smooth-scroll": "^16.1.3",
-    "swiper": "^9.1.0",
-    "tippy.js": "^6.3.7",
-    "vanilla-sharing": "^6.1.1"
-  }
+	"name": "Zeno Starter",
+	"version": "3.0rc1",
+	"description": "Zeno stack for assets compilation",
+	"scripts": {
+		"build": "NODE_ENV=production node esbuild.js",
+		"watch": "NODE_ENV=development node esbuild.js"
+	},
+	"type": "module",
+	"author": "Francesco Selva",
+	"license": "MIT",
+	"funding": {
+		"type": "individual",
+		"url": "https://paypal.me/zenotds"
+	},
+	"devDependencies": {
+		"browser-sync": "^3.0.2",
+		"chokidar": "^3.6.0",
+		"esbuild": "^0.23.0",
+		"esbuild-sass-plugin": "^3.3.1"
+	},
+	"dependencies": {
+		"aos": "^2.3.4",
+		"bootstrap": "^5.3.3",
+		"glightbox": "^3.3.0",
+		"gsap": "^3.12.5",
+		"mixitup": "^3.3.1",
+		"mixitup-multifilter": "naimboughattas/mixitup-multifilter",
+		"plyr": "^3.7.8",
+		"smooth-scroll": "^16.1.3",
+		"swiper": "^11.1.5",
+		"tailwindcss": "^3.4.6",
+		"tippy.js": "^6.3.7",
+		"vanilla-sharing": "^6.1.2",
+		"vanillajs-scrollspy": "^3.0.8"
+	},
+	"config": {
+		"uri": "https://www.bizen.it"
+	}
 }
