--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@bizen/wp_devkit",
-	"version": "3.5.0",
+	"version": "4.0.0",
 	"description": "WP Theme Devkit",
 	"scripts": {
 		"build": "NODE_ENV=production node esbuild.js",
@@ -14,28 +14,30 @@
 		"url": "https://paypal.me/zenotds"
 	},
 	"devDependencies": {
+		"@tailwindcss/postcss": "^4.0.3",
 		"autoprefixer": "^10.4.20",
 		"browser-sync": "^3.0.3",
-		"chalk": "^5.3.0",
-		"chokidar": "4.0.1",
-		"esbuild": "^0.24.0",
+		"chalk": "^5.4.1",
+		"chokidar": "4.0.3",
+		"esbuild": "^0.24.2",
 		"esbuild-sass-plugin": "^3.3.1",
-		"postcss": "^8.4.47",
+		"postcss": "^8.5.1",
 		"postcss-import": "^16.1.0",
-		"sass": "^1.80.2"
+		"sass": "^1.83.4"
 	},
 	"dependencies": {
 		"aos": "^2.3.4",
 		"bootstrap": "^5.3.3",
 		"countup.js": "^2.8.0",
-		"glightbox": "^3.3.0",
-		"gsap": "^3.12.5",
-		"mixitup": "^3.3.1",
-		"mixitup-multifilter": "naimboughattas/mixitup-multifilter",
+		"glightbox": "^3.3.1",
+		"gsap": "^3.12.7",
+		"image-compare-viewer": "^1.6.2",
+		"mixitup": "^3.3.2",
+		"mixitup-multifilter": "^3.3.7",
 		"plyr": "^3.7.8",
 		"smooth-scroll": "^16.1.3",
-		"swiper": "^11.1.14",
-		"tailwindcss": "^3.4.14",
+		"swiper": "^11.2.2",
+		"tailwindcss": "^4.0.3",
 		"tippy.js": "^6.3.7",
 		"vanilla-sharing": "^6.1.2",
 		"vanillajs-scrollspy": "^3.0.8"
