--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-	"name": "@bizen/wp_devkit",
-	"version": "4.0.2",
-	"description": "WP Theme Devkit",
+	"name": "@zenotds/wp_devkit",
+	"version": "4.1",
+	"description": "Zeno's WP DevKit",
 	"scripts": {
-		"build": "NODE_ENV=production node esbuild.js",
-		"watch": "NODE_ENV=development node esbuild.js",
-		"bs5": "sass ./dev/css/bs5/bs5.source ./dev/css/bs5/bs5.css"
+		"postinstall": "ln -sf ../../../wp-config.php ./wp-config.php",
+		"dev": "NODE_ENV=development node esbuild.js",
+		"watch": "npm run dev",
+		"prod": "NODE_ENV=production node esbuild.js",
+		"build": "npm run prod"
 	},
 	"type": "module",
 	"author": "Francesco Selva",
@@ -15,18 +17,22 @@
 		"url": "https://paypal.me/zenotds"
 	},
 	"devDependencies": {
-		"@tailwindcss/postcss": "^4.0.3",
+		"@tailwindcss/postcss": "^4.0.8",
 		"autoprefixer": "^10.4.20",
 		"browser-sync": "^3.0.3",
 		"chalk": "^5.4.1",
 		"chokidar": "4.0.3",
-		"esbuild": "^0.24.2",
+		"esbuild": "^0.25.0",
 		"esbuild-sass-plugin": "^3.3.1",
-		"postcss": "^8.5.1",
+		"postcss": "^8.5.3",
 		"postcss-import": "^16.1.0",
-		"sass": "^1.83.4"
+		"sass": "^1.85.1"
 	},
 	"dependencies": {
+		"@fancyapps/ui": "^5.0.36",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16",
+		"alpinejs": "^3.14.8",
 		"aos": "^2.3.4",
 		"bootstrap": "^5.3.3",
 		"countup.js": "^2.8.0",
@@ -37,10 +43,11 @@
 		"mixitup-multifilter": "^3.3.7",
 		"plyr": "^3.7.8",
 		"smooth-scroll": "^16.1.3",
-		"swiper": "^11.2.2",
-		"tailwindcss": "^4.0.3",
+		"swiper": "^11.2.4",
+		"tailwindcss": "^4.0.8",
 		"tippy.js": "^6.3.7",
 		"vanilla-sharing": "^6.1.2",
-		"vanillajs-scrollspy": "^3.0.8"
+		"vanillajs-scrollspy": "^3.0.8",
+		"vidstack": "^1.12.13"
 	}
 }
