--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zenotds/wp_devkit",
-	"version": "4.1",
+	"version": "5.0",
 	"description": "Zeno's WP DevKit",
 	"scripts": {
 		"postinstall": "ln -sf ../../../wp-config.php ./wp-config.php",
@@ -17,37 +17,25 @@
 		"url": "https://paypal.me/zenotds"
 	},
 	"devDependencies": {
-		"@tailwindcss/postcss": "^4.0.9",
-		"autoprefixer": "^10.4.20",
-		"browser-sync": "^3.0.3",
-		"chalk": "^5.4.1",
+		"@tailwindcss/postcss": "^4.1.17",
+		"autoprefixer": "^10.4.22",
+		"browser-sync": "^3.0.4",
+		"chalk": "^5.6.2",
 		"chokidar": "4.0.3",
-		"esbuild": "^0.25.0",
-		"esbuild-sass-plugin": "^3.3.1",
-		"postcss": "^8.5.3",
-		"postcss-import": "^16.1.0",
-		"sass": "^1.85.1"
+		"esbuild": "^0.27.0",
+		"postcss": "^8.5.6"
 	},
 	"dependencies": {
-		"@fancyapps/ui": "^5.0.36",
+		"@alpinejs/collapse": "^3.15.1",
 		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.16",
-		"alpinejs": "^3.14.8",
-		"aos": "^2.3.4",
-		"bootstrap": "^5.3.3",
-		"countup.js": "^2.8.0",
-		"glightbox": "^3.3.1",
-		"gsap": "^3.12.7",
-		"image-compare-viewer": "^1.6.2",
+		"@tailwindcss/typography": "^0.5.19",
+		"alpinejs": "^3.15.1",
+		"gsap": "^3.13.0",
+		"lenis": "^1.3.14",
 		"mixitup": "^3.3.2",
 		"mixitup-multifilter": "^3.3.7",
-		"plyr": "^3.7.8",
-		"smooth-scroll": "^16.1.3",
-		"swiper": "^11.2.4",
-		"tailwindcss": "^4.0.9",
-		"tippy.js": "^6.3.7",
-		"vanilla-sharing": "^6.1.2",
-		"vanillajs-scrollspy": "^3.0.8",
+		"swiper": "^12.0.3",
+		"tailwindcss": "^4.1.17",
 		"vidstack": "^1.12.13"
 	}
 }
